fix:issue32-add new payment method on dashboard and back button css is fixed align center on every modal

--- a/src/app/modules/payments/payment/payment.component.scss
+++ b/src/app/modules/payments/payment/payment.component.scss
@@ -9,3 +9,7 @@
 .pull-left {
   cursor: pointer;
 }
+
+.modal-header {
+  align-items: center;
+}
