--- a/src/app/modules/user/add-card/add-card.component.scss
+++ b/src/app/modules/user/add-card/add-card.component.scss
@@ -1,15 +1,11 @@
 .modal-body {
-    .row {
-        min-height: 205px;
-    }
+  min-height: 135px;
 }
-
 .modal-footer {
-    button {
-        cursor: pointer;
-    }
+  button {
+      cursor: pointer;
+  }
 }
-
 .pull-left {
   cursor: pointer;
 }
